--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,5 +4,5 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: #f4f4f4;
+    background-color: aquamarine;
 }
